First release of Hello World!

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="services-grid">
           <div class="srv-card">
             <div class="card-desc">
-              <h3>Brand identity</h3>
+              <h3>Brand</h3>
               <p class="text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
