--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <body class="dark">
+  <body>
     <header>
       <!-- --------- Navbar --------- -->
       <nav class="Container">
