set up a basic js project, added commitlint and husky for liniting commit messages

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
               <a href="#" class="nav-link">Home</a>
             </li>
             <li>
-              <a href="/about" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Services</a>
+              <a href="#Services" class="nav-link">Services</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Portfolio</a>
+              <a href="#Portfolio" class="nav-link">Portfolio</a>
             </li>
             <li>
               <a href="#" class="nav-link">Contact</a>
@@ -97,7 +97,7 @@
     </main>
 
     <!-- --------- About Section --------- -->
-    <section class="about section">
+    <section id="about" class="about section">
       <img src="./assets/triangle.png" class="triangle" alt="triangle" />
       <div class="Container">
         <div class="about-grid">
@@ -224,7 +224,9 @@
         </div>
       </div>
     </section>
-    <section class="services section">
+
+    <!-- --------- Services Section --------- -->
+    <section id="Services" class="services section">
       <div class="Container">
         <div class="services-info">
           <h3 class="subheading">My Services</h3>
@@ -302,10 +304,79 @@
       </div>
     </section>
 
-    <!-- --------- Services Section --------- -->
-
     <!-- --------- Portfolio Section --------- -->
-
+    <section id="Portfolio" class="protfolio section">
+      <div class="Container">
+        <div class="protfolio-header">
+          <div class="protfolio-title">
+            <h1 class="subheading">Protfolio</h1>
+            <h3 class="heading">Lastest Projects</h3>
+          </div>
+          <div class="Filter-btns">
+            <button class="filter-btn">All</button>
+            <button class="filter-btn">Products</button>
+            <button class="filter-btn">Interacting</button>
+            <button class="filter-btn">Web App</button>
+          </div>
+        </div>
+        <div class="protfolio-gallery">
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port1.jpg" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port2.png" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port3.jpg" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port4.png" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port5.png" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+          <div class="prt-card">
+            <div class="prt-img">
+              <img src="./assets/port6.jpg" alt="port1" />
+            </div>
+            <div class="prt-desc">
+              <h3>Olido interaction</h3>
+              <a href="#" class="btn secondary-btn sm">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- --------- Testimonials Section --------- -->
 
     <!-- --------- Contact Section --------- -->
