--- a/index.html
+++ b/index.html
@@ -459,8 +459,61 @@
     <!-- --------- Testimonials Section --------- -->
     <div class="Testimonials section">
       <div class="Container">
-        <div class="section-background"></div>
-        <div class="reviews"></div>
+        <div class="section-background">
+          <img src="./assets/person2.png" alt="person" class="test-img" />
+          <img src="./assets/circle2.png" alt="person" class="circle" />
+          <img src="./assets/square1.png" alt="person" class="Square" />
+        </div>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="client">
+                <img src="./assets/testi1.png" alt="testi1" />
+                <div class="Client-info">
+                  <h4>Kelly Williams</h4>
+                  <h5>Executive Officer <a href="#">@AbEnegry</a></h5>
+                </div>
+              </div>
+              <q class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate expedita, voluptas cumque ipsum veritatis sint
+                similique illo? Soluta quo doloremque eum consectetur blanditiis
+                molestias maiores officiis animi unde dolor! Id.
+              </q>
+            </div>
+            <div class="swiper-slide">
+              <div class="client">
+                <img src="./assets/testi2.png" alt="testi1" />
+                <div class="Client-info">
+                  <h4>Kelly Williams</h4>
+                  <h5>Executive Officer <a href="#">@AbEnegry</a></h5>
+                </div>
+              </div>
+              <q class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate expedita, voluptas cumque ipsum veritatis sint
+                similique illo? Soluta quo doloremque eum consectetur blanditiis
+                molestias maiores officiis animi unde dolor! Id.
+              </q>
+            </div>
+            <div class="swiper-slide">
+              <div class="client">
+                <img src="./assets/testi3.png" alt="testi1" />
+                <div class="Client-info">
+                  <h4>Kelly Williams</h4>
+                  <h5>Executive Officer <a href="#">@AbEnegry</a></h5>
+                </div>
+              </div>
+              <q class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate expedita, voluptas cumque ipsum veritatis sint
+                similique illo? Soluta quo doloremque eum consectetur blanditiis
+                molestias maiores officiis animi unde dolor! Id.
+              </q>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
         <div class="Testimonials-Title">
           <h3 class="subheading">Testimonials</h3>
           <h1 class="heading">Hear from my happy clients</h1>
